@@ -41,7 +41,7 @@ INSTL_DATABASE_OLD_PROCESS_DESC="Any existing backup tables from former Joomla! 
 INSTL_DATABASE_OLD_PROCESS_LABEL="Old Database Process"
 INSTL_DATABASE_PASSWORD_DESC="For site security using a password for the mysql account is mandatory"
 INSTL_DATABASE_PASSWORD_LABEL="Password"
-INSTL_DATABASE_PREFIX_DESC="Dont use &quot;bak_&quot; since this is used for backup tables"
+INSTL_DATABASE_PREFIX_DESC="Choose a database prefix. Ideally, three or four characters long, contain only alphanumeric characters, and MUST end in an underscore. Do not use &quot;bak_&quot; since this is used for backup tables."
 INSTL_DATABASE_PREFIX_LABEL="Table Prefix"
 INSTL_DATABASE_TYPE_DESC="This is probably &quot;mysql&quot;"
 INSTL_DATABASE_TYPE_LABEL="Database Type"
